<?xml version="1.0"?>
<package format="2">
  <name>coxslam</name>
  <version>0.0.1</version>
  <description>Multi robot collaborative ORBSLAM</description>

  <maintainer email="xiangyu002@e.ntu.edu.sg">Mike Xiangyu Liu</maintainer>

  <author>Mike Xiangyu Liu</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>eigen_catkin</depend>
  <depend>corbslam_client</depend>
  <depend>corbslam_server</depend>

</package>